--- a/package.json
+++ b/package.json
@@ -1,36 +1,50 @@
 {
-  "name": "genshin-manual-import",
-  "version": "1.0.0",
-  "description": "Aid to manually find Genshin Wish URL from cache",
-  "keywords": [],
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "name": "genshin-wish-pc-manual-aid",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bootstrap": "5.2.3",
-    "react": "18.0.0",
-    "react-bootstrap": "2.7.0",
-    "react-dom": "18.0.0",
+    "bootstrap": "^5.2.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "2.7.2",
+    "react-dom": "^18.2.0",
     "react-drag-drop-files": "2.3.9",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "@types/react": "^18.0.0",
-    "typescript": "4.1.3"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.23",
+    "@types/react": "^18.0.33",
+    "@types/react-bootstrap": "^0.32.32",
+    "@types/react-dom": "^18.0.11",
+    "jest-extended": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "tsc && react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
